// 指定 proto 版本
syntax = "proto3";

// 引入日期扩展import "google/protobuf/timestamp.proto";

// 指定包名
package messageGrpc;
// 指定命名空间，与package作用相同，优先级更高
//option csharp_namespace = "GrpcService";

// 定义服务
// The greeting service definition.
service Message {
    // 定义方法
    // Sends a greeting
    rpc GetMessage (RequestModel) returns (ReplyModel);
}

// Request 请求结构
// The request message containing the user's name.
message RequestModel {
    string code = 1 ;
    string lang = 2;
    string defaultValue = 3;
}

// Response 响应结构
// The response message containing the greetings.
message ReplyModel {
    int32 Code = 1;
    string Msg = 2;
    string Data = 3;
    string MethodName = 4;
}